// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue/UIP renders correctly - basic 1`] = `
<p
  class="ui-p ui-p--large"
>
  Test
</p>
`;

exports[`vue/UIP renders correctly - with id 1`] = `
<p
  class="ui-p"
  id="test"
>
  Test
</p>
`;

exports[`vue/UIP renders correctly - with itemProp 1`] = `
<p
  class="ui-p"
  itemprop="description"
>
  Test
</p>
`;
